--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="pt">
 <head>
   <meta charset="UTF-8">
-  <title>Isaura's Guide - Rome</title>
+  <title>Lara's Guide - Lisbon</title>
+  <link rel="icon" type="image/png" href="user-icon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Leaflet -->
